# server-monitor

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
api-requests/: requests.http  requests.hurl
src/: main.rs
