[package]
name = "server-monitor"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
jiff = { version = "0.2" }
reqwest = { version = "0.12" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
